<resources>
    <string name="app_name">Consulenze App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register">Register</string>
    <string name="insert_value">Fill in the fields</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="principal_specialization">Principal specialization</string>
    <string name="secondary_specializations">Secondary specializations</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="valutation_text">Find out how users evaluate you</string>
    <string name="rating_text">Your rating is:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Dates</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_insert">Insert</string>
    <string name="Specialization">Specialization</string>
    <string name="Register">Register</string>
    <string name="appIcon">appIcon</string>
    <string name="AppName">ConsultationApp</string>
    <string name="applicazionePerConsulenza">Consultation App</string>
    <string name="large_text">Large Text</string>
    <string name="availability">Availability</string>
    <string name="new_requests">New requests</string>
    <string name="history">Activity history</string>
    <string name="received_request">Received request</string>
    <string name="account">Account</string>
    <string name="rating">Rating</string>
    <string name="personal">Personal</string>
    <string name="Personal">Personal</string>
    <string name="title_activity_disponibilita">Availability</string>
    <string name="title_activity_nuove_richieste">New Request</string>
    <string name="title_activity_storico_attivita">History</string>
    <string name="title_activity_richieste_ricevute">Received Request</string>
    <string name="title_activity_profilo">Account</string>
    <string name="title_activity_valutazione">Rating</string>
    <string name="title_activity_storico_attivta">history</string>
    <string name="select_date">Select Date</string>
    <string name="select_hour">Select Hour</string>
    <string name="select_beginning">Select beginning</string>
    <string name="select_ending">Select ending</string>
    <string name="insert_password">Insert password</string>
    <string name="insert_password_again">Insert password again</string>
    <string name="dates">Dates</string>
    <string name="insert">Insert</string>
    <string name="not_repeat">Not repeat</string>
    <string name="repeat_week">Repeat week</string>
    <string name="repeat_2_week">Repeat 2 week</string>
    <string name="insert_request">Insert Request</string>
    <string name="select_spec">Select the specialization:</string>
    <string name="send_request">Send request</string>
    <string name="update_fields">Update fields</string>
    <string name="update">Update</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">End time:</string>
    <string name="NoConnection">Ops!! Maybe you forget to turn on data connection or your email and password are not correct. Please go back and retry.</string>
    <string name="valutation">Valutation</string>
    <string name="Edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="Spec">Specialization:</string>
    <string name="dateiniz">Date:</string>
    <string name="StartTime">Start Time</string>
    <string name="EndTime">End Time</string>
    <string name="Tutor">Tutor:</string>
    <string name="EvaluateTutor">Evaluate Tutor</string>
    <string name="FinishDate">Finish Date</string>
    <string name="TextValTutor">Here you can add your own rating for this tutor</string>
    <string name="SendEvaluation">Send Evaluation</string>
    <string name="Accept">Accept</string>
    <string name="Deny">Deny</string>
    <string name="User">User</string>


</resources>
