<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/availability"
            android:title="@string/availability" />
        <item
            android:id="@+id/new_request"
            android:title="@string/new_requests" />
        <item
            android:id="@+id/history"
            android:title="@string/history" />
        <item
            android:id="@+id/received_request"
            android:title="@string/received_request" />

    </group>

    <item android:title="@string/personal">
        <menu>
            <item
                android:id="@+id/account"
                android:title="@string/account" />
            <item
                android:id="@+id/rating"
                android:title="@string/rating" />
        </menu>
    </item>

</menu>
