<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.andreapolimena.consulenzeapp.ModificaDisponibilita">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/specializzazione"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/Specialization" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:id="@+id/date"
        android:layout_below="@+id/specializzazione"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="showDatePickerDialog"
        style="?android:textAppearanceSmall" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_beginning"
        android:id="@+id/oraInizio"
        android:onClick="showTimePickerDialog"
        android:layout_below="@+id/date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="?android:textAppearanceSmall" />

    <Button
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_ending"
        android:id="@+id/oraFine"
        android:onClick="showTimePickerDialog"
        android:layout_below="@+id/oraInizio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Edit"
        android:id="@+id/Modifica"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/oraFine"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="false">
        <RadioButton android:id="@+id/radiobutton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_repeat"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radiobutton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_week"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radiobutton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat_2_week"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

</RelativeLayout>
